RESOLVED FIXED214668
Fix missing exception checks below RTCPeerConnection.generateCertificate().
https://bugs.webkit.org/show_bug.cgi?id=214668
Summary Fix missing exception checks below RTCPeerConnection.generateCertificate().
Mark Lam
Reported 2020-07-22 17:55:43 PDT
Attachments
proposed patch. (16.38 KB, patch)
2020-07-22 18:16 PDT, Mark Lam
ysuzuki: review+
proposed patch. (21.75 KB, patch)
2020-07-22 19:47 PDT, Mark Lam
no flags
proposed patch. (21.80 KB, patch)
2020-07-22 21:29 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2020-07-22 18:16:06 PDT
Created attachment 405005 [details] proposed patch.
Yusuke Suzuki
Comment 2 2020-07-22 18:23:24 PDT
Comment on attachment 405005 [details] proposed patch. r=me
Mark Lam
Comment 3 2020-07-22 19:47:53 PDT
Created attachment 405010 [details] proposed patch. Previous fix has a bug. Let's try this new one on the EWS.
Mark Lam
Comment 4 2020-07-22 21:29:02 PDT
Created attachment 405016 [details] proposed patch.
Mark Lam
Comment 5 2020-07-22 22:16:54 PDT
Comment on attachment 405016 [details] proposed patch. EWS bots are green. This is ready for a review.
Yusuke Suzuki
Comment 6 2020-07-22 22:21:25 PDT
Comment on attachment 405016 [details] proposed patch. r=me
Yusuke Suzuki
Comment 7 2020-07-23 01:43:48 PDT
Comment on attachment 405016 [details] proposed patch. Looks like EWS is green!
EWS
Comment 8 2020-07-23 01:49:46 PDT
Committed r264751: <https://trac.webkit.org/changeset/264751> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405016 [details].
Note You need to log in before you can comment on or make changes to this bug.