Fix missing exception checks below RTCPeerConnection.generateCertificate(). https://bugs.webkit.org/show_bug.cgi?id=214668 <rdar://problem/65929975>

Reviewed by Yusuke Suzuki.

Source/WebCore:

Test: webrtc/missing-exception-checks-RTCPeerConnection-generateCertificate.html

* bindings/js/JSCustomElementRegistryCustom.cpp:
(WebCore::JSCustomElementRegistry::whenDefined):
* bindings/js/JSDOMConvertUnion.h:
* bindings/js/JSDOMOperationReturningPromise.h:
(WebCore::IDLOperationReturningPromise::call):
(WebCore::IDLOperationReturningPromise::callReturningOwnPromise):
(WebCore::IDLOperationReturningPromise::callStatic):
(WebCore::IDLOperationReturningPromise::callStaticReturningOwnPromise):
* bindings/js/JSDOMPromiseDeferred.cpp:
(WebCore::DeferredPromise::reject):
(WebCore::rejectPromiseWithExceptionIfAny):
* bindings/js/JSDOMPromiseDeferred.h:
(WebCore::callPromiseFunction):

LayoutTests:

* webrtc/missing-exception-checks-RTCPeerConnection-generateCertificate-expected.txt: Added.
* webrtc/missing-exception-checks-RTCPeerConnection-generateCertificate.html: Added.


Canonical link: https://commits.webkit.org/227490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264751 268f45cc-cd09-0410-ab3c-d52691b4dbfc